<resources>
    <string name="app_name">Study With Me</string>

    <string name="sample">Sample text</string>


    <!--bottom menu-->
    <string name="home_bm">Home</string>
    <string name="profile_bm">Profile</string>
    <string name="notifications_bm">Notifications</string>
    <string name="settings_bm">Settings</string>

    <!--creatpost-->
    <string name="cp_title">Ask a Questions</string>
    <string name="cp_title2">Create Post</string>
    <string name="cp_title_et">Title</string>
    <string name="cp_title_et_hint">Be specific in your title</string>
    <string name="cp_desc_et">Description</string>
    <string name="cp_desc_et_hint">Include all the information</string>
    <string name="cp_iv">Add photo</string>
    <string name="cp_iv_desc">Optional</string>
    <string name="cp_upload">Upload</string>

    <!--dashboard-->
    <string name="likecount">0</string>
    <string name="commentcount">0</string>
    <string name="hint">Search same insterest post</string>

    <!--Settings-->
    <string name="title_settings">Settings</string>
    <string name="edit_settings">Edit Profile</string>
    <string name="about_settings">About Study with me</string>
    <string name="help_settings">Help</string>
    <string name="report_settings">Report issue</string>
    <string name="logout_settings">Logout</string>

    <!--Strings for On Boarding Screen -->
    <string name="first_slide_title">Study Together using Video Call</string>
    <string name="second_slide_title">Post and ask a question to public to help you</string>
    <string name="third_slide_title">Create a team</string>
    <string name="fourth_slide_title">Video Chat with your team</string>
    <string name="fifth_slide_title">Get more subscriber</string>

    <!---Descriptopn-->
    <string name="first_slide_desc">You can video call all people that same interest like you and study together</string>
    <string name="second_slide_desc">Public post to disscuss</string>
    <string name="third_slide_desc">Build a team with other players around the world</string>
    <string name="fourth_slide_desc">Now you can easily communicate with your team by a video chat or group chat</string>
    <string name="fifth_slide_desc">Upload your highlights and get more subcriber to become rank 1 in leaderboard</string>


</resources>