<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="@string/home_bm"
        android:icon="@drawable/dashboard_icon"
        app:showAsAction="always"
        android:id="@+id/dashboard_bottom"/>

    <item android:title="@string/profile_bm"
        android:icon="@drawable/username_logo"
        app:showAsAction="always"
        android:id="@+id/Profile_bottom"/>

    <item android:title="@string/notifications_bm"
        android:icon="@drawable/notifi_icon"
        app:showAsAction="always"
        android:id="@+id/notification_bottom"/>

    <item android:title="@string/settings_bm"
        android:icon="@drawable/settings_icon"
        app:showAsAction="always"
        android:id="@+id/settings_bottom"/>

</menu>