<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/title_st"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_settings"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_margin="20dp"
                android:textSize="30sp"
                android:fontFamily="@font/baloo"/>

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/loginlot"
                android:layout_width="350dp"
                android:layout_height="300dp"
                android:layout_marginTop="30dp"
                app:layout_constraintTop_toBottomOf="@id/title_st"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:lottie_rawRes="@raw/settinglot"
                app:lottie_autoPlay="true"
                app:lottie_loop="true"/>

            <TextView
                android:id="@+id/tv_edit_st"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/loginlot"
                android:text="@string/edit_settings"
                android:drawableStart="@drawable/edit_icon"
                android:drawablePadding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_about_st"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_edit_st"
                android:text="@string/about_settings"
                android:drawableStart="@drawable/about_icon"
                android:drawablePadding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_help_st"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_about_st"
                android:text="@string/help_settings"
                android:drawableStart="@drawable/help_icon"
                android:drawablePadding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_report_st"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_help_st"
                android:text="@string/report_settings"
                android:drawableStart="@drawable/report_icon"
                android:drawablePadding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>

            <TextView
                android:id="@+id/tv_logout_st"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tv_report_st"
                android:text="@string/logout_settings"
                android:drawableStart="@drawable/logout_icon"
                android:drawablePadding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:padding="15dp"
                android:textSize="20sp"
                android:layout_marginTop="10dp"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>