<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePost">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:id="@+id/tv_back_cp"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/close_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_title2"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toRightOf="@id/tv_back_cp"
                    android:layout_marginTop="18dp"
                    android:textSize="28sp"
                    android:fontFamily="@font/baloo"
                    android:textStyle="bold"
                    android:layout_marginStart="20dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_cp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    app:cardCornerRadius="50dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="10dp"
                    app:cardBackgroundColor="@color/red">

                    <ImageButton
                        android:id="@+id/edit_profile"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:src="@drawable/arrow_icon"
                        android:background="@color/red"
                        />

                </androidx.cardview.widget.CardView>

                <com.airbnb.lottie.LottieAnimationView
                    android:id="@+id/loginlot"
                    android:layout_width="350dp"
                    android:layout_height="300dp"
                    app:layout_constraintTop_toBottomOf="@id/cv_cp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:lottie_rawRes="@raw/postlot"
                    app:lottie_autoPlay="true"
                    app:lottie_loop="true"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/cl1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent">

                <TextView
                    android:visibility="gone"
                    android:id="@+id/lbl_title_cp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_title_et"
                    android:fontFamily="sans-serif"
                    android:textSize="25sp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="50dp"
                    android:layout_marginStart="10dp"/>

                <EditText
                    android:id="@+id/et_title_cp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@id/lbl_title_cp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_input"
                    android:hint="Title of your Post"
                    android:textColor="@color/black"
                    android:padding="10dp"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/lbl_desc_cp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_desc_et"
                    android:fontFamily="sans-serif"
                    android:textSize="25sp"
                    app:layout_constraintTop_toBottomOf="@id/et_title_cp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"/>

                <EditText
                    android:id="@+id/et_desc_cp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:layout_constraintTop_toBottomOf="@id/lbl_desc_cp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/custom_input"
                    android:hint="Description"
                    android:textColor="@color/black"
                    android:padding="10dp"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/lbl_iv_cp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_iv"
                    android:fontFamily="sans-serif"
                    android:textSize="25sp"
                    app:layout_constraintTop_toBottomOf="@id/et_desc_cp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="10dp"/>

                <TextView
                    android:visibility="gone"
                    android:id="@+id/lbl_iv_dec"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cp_iv_desc"
                    android:textColor="@color/grey"
                    android:fontFamily="sans-serif"
                    android:textSize="18sp"
                    app:layout_constraintTop_toBottomOf="@id/lbl_iv_cp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="10dp"/>

                <androidx.cardview.widget.CardView
                    android:id="@+id/cv_iv"
                    android:visibility="gone"
                    android:layout_width="match_parent"
                    android:layout_height="300dp"
                    app:layout_constraintTop_toBottomOf="@id/lbl_iv_dec"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginTop="10dp"
                    app:cardElevation="20dp"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent">

                    <ImageView
                        android:visibility="gone"
                        android:id="@+id/iv_cp"
                        android:scaleType="centerCrop"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"/>


                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_upload"
                    app:layout_constraintTop_toBottomOf="@id/cv_iv"
                    android:background="@drawable/custom_input_et"
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Upload Picture"
                    android:drawableStart="@drawable/add_photo_icon"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="10dp"
                    android:textSize="20sp"
                    android:layout_gravity="center"/>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>