<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl1"
        android:layout_width="match_parent"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_height="wrap_content">
        <androidx.cardview.widget.CardView
            android:id="@+id/cv_pl"
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:cardCornerRadius="25dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp">

            <ImageView
                android:id="@+id/iv_profile_pl"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_name_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample"
            app:layout_constraintLeft_toRightOf="@id/cv_pl"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/tv_date_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sample"
            app:layout_constraintLeft_toRightOf="@id/tv_name_pl"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="10dp"
            android:fontFamily="sans-serif"/>

        <TextView
            android:id="@+id/tv_more_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/more_vertical_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="10dp"
            android:layout_marginStart="70dp"/>

        <TextView
            android:id="@+id/tv_title_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sample text"
            android:textStyle="bold"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toBottomOf="@id/tv_name_pl"
            app:layout_constraintLeft_toRightOf="@id/cv_pl"
            android:layout_marginStart="10dp"
            android:textSize="18dp"/>

        <TextView
            android:id="@+id/tv_desc_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="sample text"
            android:fontFamily="sans-serif-light"
            app:layout_constraintTop_toBottomOf="@id/tv_title_pl"
            app:layout_constraintLeft_toRightOf="@id/cv_pl"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textSize="15dp"/>

        <androidx.cardview.widget.CardView
            android:visibility="gone"
            android:id="@+id/cv2_pl"
            android:layout_width="320dp"
            android:layout_height="300dp"
            app:cardCornerRadius="10dp"
            android:layout_marginTop="10dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_desc_pl">

            <ImageView
                android:visibility="gone"
                android:id="@+id/iv_post_lp"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/cl1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:id="@+id/tv_like_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/like_icon"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="70dp"/>

        <TextView
            android:id="@+id/tv_likecount_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tv_like_pl"
            android:text="@string/likecount"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/tv_comment_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/comment_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@id/tv_like_pl"
            android:layout_marginStart="40dp"/>

        <TextView
            android:id="@+id/tv_commentcount_pl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toRightOf="@id/tv_comment_pl"
            android:text="@string/commentcount"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="10dp"/>



    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableRow
        android:id="@+id/tb2"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/cl2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>